# cockpit

./: Cargo.toml  README.md
.cargo-husky/hooks/: pre-commit
.centy/: .centy-manifest.json
.centy/docs/: architecture.md
.centy/issues/03070518-bc9b-4b5f-ba09-db6d5fc8d709/: issue.md  metadata.json
.centy/issues/072b93c3-2422-4e20-948c-c5cc0274929d/: issue.md  metadata.json
.centy/issues/450f4d85-8a8e-4cad-b6c5-c58b68fc9bb5/: issue.md  metadata.json
.centy/issues/5b19771e-aabd-4dc8-b002-4bdadd756029/: issue.md  metadata.json
.centy/issues/603ce10b-3e5e-4cd0-b542-0a4075e2af8f/: issue.md  metadata.json
.centy/issues/6a9f3c30-2e62-4bc0-8881-d5cd734be254/: issue.md  metadata.json
.centy/issues/7ffd11c1-3951-493b-9035-f1fc42b9afc5/: issue.md  metadata.json
.centy/issues/ae2ebca7-89b3-49c1-b1e3-db4fc24e6770/: issue.md  metadata.json
.centy/issues/c61b2e73-a6e3-4ae5-b296-0ef570d954c0/: issue.md  metadata.json
.centy/issues/d0cce168-3f11-4151-8208-784fe38f741f/: issue.md  metadata.json
.centy/issues/d59e8517-4642-4b00-b34c-a3f8a66ed1f9/: issue.md  metadata.json
.centy/issues/f54a496d-42c4-4666-8462-41c940bf0717/: issue.md  metadata.json
.github/workflows/: ci.yml  publish.yml
examples/: basic.rs  numbers.rs
scripts/: check-file-size.sh
src/: arrows.rs  error.rs  layout.rs  lib.rs  manager.rs  pane.rs  pty.rs  widget.rs
src/plugins/: context.rs  git_user.rs  mod.rs  registry.rs
src/status_bar/: mod.rs  segment.rs
